# bs-scheduler

./: .gitignore  404.html  LICENSE  README.md  docs.txt  index.html  make_plots.py  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: python-package.yml
bs_scheduler/: __init__.py  batch_size_manager.py  batch_size_schedulers.py  utils.py
docs/: README.md  make_plots.py  plots.md  tutorials.md
plots/: index.html
reference/: index.html
tests/: test_ChainedBSScheduler.py  test_ConstantBS.py  test_CosineAnnealingBS.py  test_CosineAnnealingBSWithWarmRestarts.py  test_CyclicBS.py  test_ExponentialBS.py  test_IncreaseBSOnPlateau.py  test_LambdaBS.py  test_LinearBS.py  test_MultiStepBS.py  test_MultiplicativeBS.py  test_OneCycleBS.py  test_PolynomialBS.py  test_SequentialBS.py  test_StepBS.py  test_utils.py
tutorials/: index.html
