[project]
name = "bs_scheduler"
version = "0.1.3"
requires-python = ">=3.9"
description = "A PyTorch Dataloader compatible batch size scheduler library."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "George Stoica", email = "george.stoica@senticlab.com"},
]
maintainers = [
    { name = "George Stoica", email = "george.stoica@senticlab.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
#    "Development Status :: 4 - Beta",
#    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD 3-Clause License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Deep Learning",
]
keywords = [
    'deep learning',
    'pytorch',
    'batch size scheduler',
    'dynamic batch size'
]
dependencies = [
    "torch>=1.1.0",
]

[project.urls]
repository = "https://github.com/ancestor-mithril/bs_scheduler"

#[project.optional-dependencies]
