[project]
name = "bs_scheduler"
version = "0.4.2"
requires-python = ">=3.9"
description = "A PyTorch Dataloader compatible batch size scheduler library."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "George Stoica", email = "george.stoica@senticlab.com"},
]
maintainers = [
    { name = "George Stoica", email = "george.stoica@senticlab.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
#    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
#    "License :: OSI Approved :: BSD 3-Clause License",  #Real
    "License :: OSI Approved :: BSD License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = [
    'deep learning',
    'pytorch',
    'batch size scheduler',
    'dynamic batch size'
]
dependencies = [
    "torch>=1.1.0",
]
[tool.setuptools.packages.find]
include = ["bs_scheduler"]

[project.urls]
Repository = "https://github.com/ancestor-mithril/bs_scheduler"
Issues = "https://github.com/ancestor-mithril/bs_scheduler/issues"


[project.optional-dependencies]
docs = [
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-material",
]
dev = [
    "matplotlib",
    "pytest",
    "flake8"
]
